# backend/src/main/java/com/hmall/user/api/UserConfig.java
@@ -1,0 +1,18 @@
+package com.hmall.user.api;
+
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
+
+/**
+ * 用户相关配置。
+ */
+@Configuration
+public class UserConfig {
+
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
+}
